--- a/dynamic-thread-pool-starter/pom.xml
+++ b/dynamic-thread-pool-starter/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>cn.shidu</groupId>
+        <groupId>cn.shidu.middleware</groupId>
         <artifactId>dynamic-thread-pool</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
-    <artifactId>dynamic-thread-pool-starter</artifactId>
+    <artifactId>dynamic-thread-pool-spring-boot-starter</artifactId>
 
     <dependencies>
         <dependency>
